# sd-scripts-app

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  AppContext.tsx  Page1.tsx  Page2.tsx  configs.ts  history.ts  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/compornts/: ArgComponets.tsx  BlockEditor.tsx  Combox.tsx  Components.tsx  File.tsx  Folder.tsx  HistoryItem.tsx  Num.tsx  QueueItem.tsx  Switch.tsx  TemplateItem.tsx  Text.tsx
src/compornts/ArgumentEditor/: ArgComponets.tsx  BlockEditor.tsx  Combox.tsx  Components.tsx  File.tsx  Folder.tsx  Num.tsx  Switch.tsx  Text.tsx
src/core/: base_models.ts  config.ts
src/tabs/: TabHistory.tsx  TabMain.tsx  TabNetwork.tsx  TabQueue.tsx  TabSettings.tsx  TabSetup.tsx  TabTemplates.tsx  TabTrain.tsx
src/utils/: CmdContext.tsx  TrainQueue.tsx  console.ts  console.tsx  setup_sd.ts
